--- a/src/styles.css
+++ b/src/styles.css
@@ -1,19 +1,19 @@
-@import url("https://fonts.googleapis.com/css2?family=Archivo:wght@400;500;600;700&family=Poppins:wght@200;400;600;800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,400;0,600;0,700;1,400&family=Poppins:wght@200;400;600;800&display=swap");
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 @layer components {
+  .text-shadow {
+    @apply drop-shadow-[0_0_5px_rgba(0,_0,_0,_0.1)];
+  }
+
   .nav-link {
-    @apply relative top-1 drop-shadow-[0_0_5px_rgba(0,_0,_0,_0.1)] transition-[color,_filter] duration-200 ease-out after:block after:h-0.5 after:w-0 after:bg-black after:drop-shadow-[0_0_5px_rgba(0,_0,_0,_0.3)] after:transition-[width] after:duration-200 after:ease-in-out hover:text-black hover:drop-shadow-[0_0_5px_rgba(0,_0,_0,_0.3)] hover:after:w-full;
+    @apply relative top-1 transition-[color,_filter] duration-200 ease-out after:block after:h-0.5 after:w-0 after:bg-black after:drop-shadow-[0_0_5px_rgba(0,_0,_0,_0.3)] after:transition-[width] after:duration-200 after:ease-in-out hover:text-black hover:drop-shadow-[0_0_5px_rgba(0,_0,_0,_0.3)] hover:after:w-full;
   }
 
   .nav-cta {
-    @apply relative top-1 flex h-8 w-44 items-center justify-center rounded text-center transition-[filter,_color,_background-color,_box-shadow] duration-200 ease-out hover:drop-shadow-[0_0_5px_rgba(0,_0,_0,_0.1)];
+    @apply relative top-1 flex h-8 w-44 items-center justify-center rounded-md text-center transition-[filter,_color,_background-color,_box-shadow] duration-200 ease-out hover:drop-shadow-[0_0_5px_rgba(0,_0,_0,_0.1)];
   }
 }
-/* 
-* {
-  color: rgb(51, 51, 51)
-} */
