--- a/src/styles.css
+++ b/src/styles.css
@@ -9,6 +9,10 @@
     @apply drop-shadow-[0_0_5px_rgba(0,_0,_0,_0.1)];
   }
 
+  .custom-shadow {
+    @apply drop-shadow-[0_0_5px_rgba(0,_0,_0,_0.8)];
+  }
+
   .nav-link {
     @apply relative top-1 transition-[color,_filter] duration-200 ease-out after:block after:h-0.5 after:w-0 after:bg-black after:drop-shadow-[0_0_5px_rgba(0,_0,_0,_0.3)] after:transition-[width] after:duration-200 after:ease-in-out hover:text-black hover:drop-shadow-[0_0_5px_rgba(0,_0,_0,_0.3)] hover:after:w-full;
   }
